--- a/about.html
+++ b/about.html
@@ -135,7 +135,11 @@
                             Ekaterina has served over 20&nbsp;years in&nbsp;various roles within the exchanges, fin-tech, and commodity trading. Based out of&nbsp;London, she was head of&nbsp;the Moscow Stock Exchange office in&nbsp;the&nbsp;UK for the global business operation, cross border compliance and clients&rsquo; onboarding. Also served as&nbsp;head of&nbsp;representation for Eastern Europe for the commodity valuation firm S&amp;P Global Platts. Before founding her company, she worked for 2,5 years at&nbsp;gwp in&nbsp;crypto/DLT sector compliance.
                         </p>
                         <p class="meet-founder__descr descr__global">
-                            The most recent work focused on&nbsp;the development of&nbsp;regulatory and compliance frameworks that address blockchain &amp;&nbsp;crypto projects management. Ekaterina holds an&nbsp;MBA in&nbsp;finance from California State University and DAS in&nbsp;Compliance Management from Hochschule Luzern. She also acts as&nbsp;a&nbsp;Board Member of&nbsp;Swiss Crypto Valley Association and Chairwoman of&nbsp;IDAXA.
+                            The most recent work focused on&nbsp;the development of&nbsp;regulatory and compliance frameworks that address blockchain &amp;&nbsp;crypto projects management. Ekaterina holds an&nbsp;MBA in&nbsp;finance from California State University and DAS in&nbsp;Compliance Management from Hochschule Luzern.
+                        </p>
+
+                        <p class="meet-founder__descr descr__global">
+                            Ekaterina is&nbsp;actively involved in&nbsp;the crypto industry&rsquo;s governance. She is&nbsp;a&nbsp;Board Member of&nbsp;the Swiss Crypto Valley Association and serves as&nbsp;the Chairwoman of&nbsp;IDAXA. Adding to&nbsp;her responsibilities, Ekaterina Anthony is&nbsp;also a&nbsp;Board Member of&nbsp;the Crypto Valley Association (CVA) and Co-chairs the AML/Compliance Working Group within the CVA.
                         </p>
                     </div>
                     <div class="col-md-6 col-12">
@@ -197,7 +201,7 @@
                 <div class="row align-items-center">
                     <div class="col-md-4 col-12 our-partners__col">
                         <div class="our-partners__wrapper">
-                            <a href="https://ch.linkedin.com/company/cheksy" class="our-partners__link" target="_blank">
+                            <a href="https://cryptovalley.swiss" class="our-partners__link" target="_blank">
                                 <img src="./img/partner1.png" alt="partner1">
                             </a>
                         </div>
@@ -231,7 +235,7 @@
                 <div class="row">
                     <h2 class="join-us__heading heading__global">
                         <a href="./contact.html" target="_blank" class=" join-us__link subscribe__link">
-                            Contact us 
+                            Contact us
                         </a>
                     </h2>
                 </div>
@@ -270,7 +274,7 @@
                                 Landis + Gyr-Strasse 1, 6300&nbsp;Zug, Switzerland
                             </p>
 
-                            <a class="address__link href="https://mailhide.io/e/rhyK8ZSC" onclick="popup=window.open('https://mailhide.io/e/rhyK8ZSC','mailhidepopup','width=580,height=635'); return false;">Send an email</a> 
+                            <a class="address__link href=" https://mailhide.io/e/rhyK8ZSC" onclick="popup=window.open('https://mailhide.io/e/rhyK8ZSC','mailhidepopup','width=580,height=635'); return false;">Send an email</a>
                             <a class="address__link" href="tel:+41765820974">+41&nbsp;765 82 0974</a>
                             <a href="https://www.linkedin.com/company/smart-compliance-gmbh/" class="address__link li__logo">
                                 <svg width="50px" height="50px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" fill="none">
