--- a/about.html
+++ b/about.html
@@ -135,11 +135,11 @@
                             Ekaterina has served over 20&nbsp;years in&nbsp;various roles within the exchanges, fin-tech, and commodity trading. Based out of&nbsp;London, she was head of&nbsp;the Moscow Stock Exchange office in&nbsp;the&nbsp;UK for the global business operation, cross border compliance and clients&rsquo; onboarding. Also served as&nbsp;head of&nbsp;representation for Eastern Europe for the commodity valuation firm S&amp;P Global Platts. Before founding her company, she worked for 2,5 years at&nbsp;gwp in&nbsp;crypto/DLT sector compliance.
                         </p>
                         <p class="meet-founder__descr descr__global">
-                            The most recent work focused on&nbsp;the development of&nbsp;regulatory and compliance frameworks that address blockchain &amp;&nbsp;crypto projects management. Ekaterina holds an&nbsp;MBA in&nbsp;finance from California State University and DAS in&nbsp;Compliance Management from Hochschule Luzern.
+                            The most recent work focused on&nbsp;the development of&nbsp;regulatory and compliance frameworks that address blockchain &amp;&nbsp;crypto projects management. Ekaterina holds <b class="text_bold">an&nbsp;MBA in&nbsp;finance from California State University</b> and <b class="text_bold">DAS in&nbsp;Compliance Management from Hochschule Luzern</b>.
                         </p>
 
                         <p class="meet-founder__descr descr__global">
-                            Ekaterina is&nbsp;actively involved in&nbsp;the crypto industry&rsquo;s governance. She is&nbsp;a&nbsp;Board Member of&nbsp;the Swiss Crypto Valley Association and serves as&nbsp;the Chairwoman of&nbsp;IDAXA. Adding to&nbsp;her responsibilities, Ekaterina Anthony is&nbsp;also a&nbsp;Board Member of&nbsp;the Crypto Valley Association (CVA) and Co-chairs the AML/Compliance Working Group within the CVA.
+                            Ekaterina is&nbsp;actively involved in&nbsp;the crypto industry&rsquo;s governance. She is&nbsp;a&nbsp;<b class="text_bold">Board Member of&nbsp;the Swiss Crypto Valley Association</b> and serves as&nbsp;<b class="text_bold">the Chairwoman of&nbsp;IDAXA</b>. Adding to&nbsp;her responsibilities, Ekaterina Anthony is&nbsp;also <b class="text_bold">a&nbsp;Board Member of&nbsp;the Crypto Valley Association (CVA)</b> and <b class="text_bold">Co-chairs the AML/Compliance Working Group within the CVA</b>.
                         </p>
                     </div>
                     <div class="col-md-6 col-12">
