--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                 <h3 class="services__descr subtitle__global">
                     Check the list of&nbsp;our key services or&nbsp;contact&nbsp;us for more information </h3>
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-lg-7 col-12">
                         <div class="accordion">
                             <div class="accordion-item">
                                 <button class="accordion-button">
@@ -499,6 +499,10 @@
                             </div>
 
                         </div>
+
+                    </div>
+                    <div class="col-lg-5 col-12">
+                        <img class="accordion__img" src="./img/butterfly-acc.jpg" alt="Butterfly">
                     </div>
                 </div>
             </div>
