--- a/contact.html
+++ b/contact.html
@@ -190,7 +190,7 @@
                                 Registered office:
                             </p>
                             <p class="address__descr">
-                                Landis + Gyr-Strasse 1, 6300&nbsp;Zug, Switzerland
+                                Landis + Gyr-Strasse 1, <br> 6300&nbsp;Zug, Switzerland
                             </p>
 
                             <a class="address__link href=" https://mailhide.io/e/rhyK8ZSC" onclick="popup=window.open('https://mailhide.io/e/rhyK8ZSC','mailhidepopup','width=580,height=635'); return false;">Send an email</a>
