--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
     <link href="./css/style.css" rel="stylesheet">
     <link href="./css/media.css" rel="stylesheet">
+    <meta name="google-site-verification" content="GFjXB_986YLuzFP7Q0ePf9oTwuMBmzsJhXW0iKQgbhI" />
 </head>
 
 <body>
@@ -155,10 +156,10 @@
                                 Do&nbsp;you understand your business risks?
                             </li>
                             <li class="about-us__list-item">
-                                Have problems to&nbsp;open an&nbsp;operational Bank account?
+                                Do&nbsp;you have problems opening an&nbsp;operational bank account?
                             </li>
                             <li class="about-us__list-item">
-                                Relocation support needed?
+                                Do&nbsp;you need relocation support?
                             </li>
                         </ul>
                     </div>
@@ -337,7 +338,8 @@
                 <h3 class="services__descr subtitle__global">
                     Check the list of&nbsp;our key services or&nbsp;contact&nbsp;us for more information </h3>
                 <div class="row">
-                    <div class="col-lg-7 col-12">
+                    <div class="col-12 accordion__col">
+
                         <div class="accordion">
                             <div class="accordion-item">
                                 <button class="accordion-button">
@@ -501,9 +503,7 @@
                         </div>
 
                     </div>
-                    <div class="col-lg-5 col-12">
-                        <img class="accordion__img" src="./img/butterfly-acc.jpg" alt="Butterfly">
-                    </div>
+
                 </div>
             </div>
         </section>
@@ -595,7 +595,7 @@
                                 Registered office:
                             </p>
                             <p class="address__descr">
-                                Landis + Gyr-Strasse 1, 6300&nbsp;Zug, Switzerland
+                                Landis + Gyr-Strasse 1, <br> 6300&nbsp;Zug, Switzerland
                             </p>
 
                             <a class="address__link href=" https://mailhide.io/e/rhyK8ZSC" onclick="popup=window.open('https://mailhide.io/e/rhyK8ZSC','mailhidepopup','width=580,height=635'); return false;">Send an email</a>
