--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
 
     <link href="./css/style.css" rel="stylesheet">
     <link href="./css/media.css" rel="stylesheet">
+    <link rel="canonical" href="https://smart-compliance.ch">
     <meta name="google-site-verification" content="GFjXB_986YLuzFP7Q0ePf9oTwuMBmzsJhXW0iKQgbhI" />
+
 </head>
 
 <body>
