--- a/events.html
+++ b/events.html
@@ -142,14 +142,14 @@
 
                             <li class="events-item">
                                 <article class="events-preview">
-                                    <a href="./events/world-crypto-forum-in-davos.html" class="events-preview__link">
+                                    <a href="./events/crypto2030-in-davos.html" class="events-preview__link">
                                         <img class="events-preview__image" src="./img/events-preview-1.png" alt="Events preview image">
                                         <div class="events-preview__text">
                                             <h3 class="events-preview__heading subtitle__global">
-                                                SMART-compliance partners with World Crypto Forum in&nbsp;Davos
+                                                SMART-compliance partners with CRYPTO2030
                                             </h3>
                                             <p class="events-preview__descr descr__global">
-                                                SMART-compliance GmbH is&nbsp;proud to&nbsp;announce our partnership with the World Crypto Forum, taking place in&nbsp;Davos, Switzerland from January 15th to&nbsp;19th, 2024. As&nbsp;a&nbsp;leading company in&nbsp;Switzerland, specializing in&nbsp;helping entrepreneurs obtain the necessary permits to&nbsp;run their businesses, we&nbsp;are excited to&nbsp;join forces with the World Crypto Forum in&nbsp;advancing the future of&nbsp;Web3.
+                                                SMART-compliance GmbH is&nbsp;proud to&nbsp;announce our partnership with the CRYPTO2030, taking place in&nbsp;Davos, Switzerland from January 15th to&nbsp;19th, 2024. As&nbsp;a&nbsp;leading company in&nbsp;Switzerland, specializing in&nbsp;helping entrepreneurs obtain the necessary permits to&nbsp;run their businesses, we&nbsp;are excited to&nbsp;join forces with CRYPTO2030 in&nbsp;advancing the future of&nbsp;Web3.
                                             </p>
                                         </div>
                                     </a>
