--- a/events/crypto2030-in-davos.html
+++ b/events/crypto2030-in-davos.html
@@ -126,7 +126,7 @@
 
                     <div class="col-12">
                         <h2 class="events-item__heading heading__global">
-                            SMART-compliance partners with World Crypto Forum in Davos
+                            SMART-compliance partners with CRYPTO2030 in Davos
                         </h2>
                     </div>
 
@@ -136,14 +136,16 @@
                     <div class="col-12">
                         <div class="events-item__wrapper">
 
+
+
                             <a href="https://www.wcf2030.org" class="events-item__link">
-                                <img src="../img/WCF-logo.png" alt="World Crypto Forum logo">
+                                <img src="../img/crypto2030.svg" alt="CRYPTO2030 logo">
                             </a>
 
                             <p class="descr__global events-item__descr">
-                                SMART-compliance GmbH is&nbsp;proud to&nbsp;announce our partnership with the World Crypto Forum, taking place in&nbsp;Davos, Switzerland from January 15th to&nbsp;19th, 2024. As&nbsp;a&nbsp;leading company in&nbsp;Switzerland, specializing in&nbsp;helping entrepreneurs obtain the necessary permits to&nbsp;run their businesses, we&nbsp;are excited to&nbsp;join forces with the World Crypto Forum in&nbsp;advancing the future of&nbsp;Web3. </p>
+                                SMART-compliance GmbH is&nbsp;proud to&nbsp;announce our partnership with CRYPTO2030, taking place in&nbsp;Davos, Switzerland from January 15th to&nbsp;19th, 2024. As&nbsp;a&nbsp;leading company in&nbsp;Switzerland, specializing in&nbsp;helping entrepreneurs obtain the necessary permits to&nbsp;run their businesses, we&nbsp;are excited to&nbsp;join forces with CRYPTO2030 in&nbsp;advancing the future of&nbsp;Web3. </p>
                             <p class="descr__global events-item__descr">
-                                The World Crypto Forum in&nbsp;Davos is&nbsp;a&nbsp;landmark event for the blockchain and crypto community, bringing together innovators, entrepreneurs, and thought leaders from around the world to&nbsp;UNITE, INNOVATE, and TRANSFORM the landscape of&nbsp;Web3&nbsp;technologies. With a&nbsp;lineup of&nbsp;distinguished speakers and industry experts, this event promises to&nbsp;be&nbsp;a&nbsp;gathering of&nbsp;immense value. </p>
+                                CRYPTO2030 in&nbsp;Davos is&nbsp;a&nbsp;landmark event for the blockchain and crypto community, bringing together innovators, entrepreneurs, and thought leaders from around the world to&nbsp;UNITE, INNOVATE, and TRANSFORM the landscape of&nbsp;Web3&nbsp;technologies. With a&nbsp;lineup of&nbsp;distinguished speakers and industry experts, this event promises to&nbsp;be&nbsp;a&nbsp;gathering of&nbsp;immense value. </p>
                             <p class="descr__global events-item__descr">
                                 <b class="text_bold">Ekaterina Anthony, CEO and Board Member of&nbsp;SMART-compliance GmbH, will be&nbsp;a&nbsp;featured speaker and moderator</b> at&nbsp;the event, sharing insights and expertise on&nbsp;regulatory compliance and its critical role in&nbsp;the blockchain and crypto industry.
                             </p>
