--- a/index.html
+++ b/index.html
@@ -190,12 +190,12 @@
                                     <div class="swiper__content">
                                         <a href="./events.html" class="swiper__section-link">EVENTS</a>
                                         <h3 class="swiper__heading heading__global">
-                                            <a class="swiper__heading-link" href="./events/world-crypto-forum-in-davos.html" target="_blank">
-                                                SMART-compliance partners with World Crypto Forum in Davos
+                                            <a class="swiper__heading-link" href="./events/crypto2030-in-davos.html" target="_blank">
+                                                SMART-compliance partners with CRYPTO2030 in Davos
                                             </a>
 
                                         </h3>
-                                        <a href="./events/world-crypto-forum-in-davos.html" target="_blank" class="swiper__link">Read more</a>
+                                        <a href="./events/crypto2030-in-davos.html" target="_blank" class="swiper__link">Read more</a>
                                     </div>
                                 </div>
                                 <div class="swiper-slide slide-2">
