--- a/events/crypto2030-in-davos.html
+++ b/events/crypto2030-in-davos.html
@@ -107,6 +107,9 @@
     <main class="main">
 
         <section class="hero">
+            <video id="background-video" class="hero__video" autoplay loop muted>
+                <source src="../animation/s-compl_1.mp4" type="video/mp4">
+            </video>
             <div class="container hero__container">
                 <div class="row">
                     <div class="col-xl-4 col-md-6 col-sm-7 hero__content">
