--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
     <main class="main">
 
         <section class="hero">
+            <video id="background-video" class="hero__video" autoplay loop muted>
+                <source src="./animation/s-compl_1.mp4" type="video/mp4">
+            </video>
             <div class="container hero__container">
                 <div class="row">
                     <div class="col-xl-4 col-md-5 col-sm-8 hero__content">
@@ -188,6 +191,18 @@
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide slide-1">
                                     <div class="swiper__content">
+                                        <a href="https://youtu.be/ZTYX4GZhpdA?si=_zivaED0NREY-Ryp" class="swiper__section-link">PODCAST</a>
+                                        <h3 class="swiper__heading heading__global">
+                                            <a class="swiper__heading-link" href="https://youtu.be/ZTYX4GZhpdA?si=_zivaED0NREY-Ryp" target="_blank">
+                                                Join our moderator, Ekaterina Anthony, and the panelists as they explore the regulatory landscape in the crypto world
+                                            </a>
+
+                                        </h3>
+                                        <a href="https://youtu.be/ZTYX4GZhpdA?si=_zivaED0NREY-Ryp" target="_blank" class="swiper__link">Read more</a>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide slide-2">
+                                    <div class="swiper__content">
                                         <a href="./events.html" class="swiper__section-link">EVENTS</a>
                                         <h3 class="swiper__heading heading__global">
                                             <a class="swiper__heading-link" href="./events/crypto2030-in-davos.html" target="_blank">
@@ -198,7 +213,18 @@
                                         <a href="./events/crypto2030-in-davos.html" target="_blank" class="swiper__link">Read more</a>
                                     </div>
                                 </div>
-                                <div class="swiper-slide slide-2">
+                                <div class="swiper-slide slide-3">
+                                    <div class="swiper__content">
+                                        <a href="https://cointelegraph.com/press-releases/crypto2030-a-convergence-of-elite-minds-in-davos" class="swiper__section-link">PRESS RELEASE</a>
+                                        <h3 class="swiper__heading heading__global">
+                                            <a class="swiper__heading-link" href="https://cointelegraph.com/press-releases/crypto2030-a-convergence-of-elite-minds-in-davos" target="_blank">
+                                                Crypto2030: a convergence of elite minds in Davos
+                                            </a>
+                                        </h3>
+                                        <a href="https://cointelegraph.com/press-releases/crypto2030-a-convergence-of-elite-minds-in-davos" target="_blank" class="swiper__link">Read more</a>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide slide-4">
                                     <div class="swiper__content">
                                         <a href="./content-corner.html" class="swiper__section-link">BLOG</a>
                                         <h3 class="swiper__heading heading__global">
@@ -209,7 +235,7 @@
                                         <a href="./blog/new-challenges-and-cross-border-transactions.html" target="_blank" class="swiper__link">Read more</a>
                                     </div>
                                 </div>
-                                <div class="swiper-slide slide-3">
+                                <div class="swiper-slide slide-5">
                                     <div class="swiper__content">
                                         <a href="./content-corner.html" class="swiper__section-link">BLOG</a>
                                         <h3 class="swiper__heading heading__global">
@@ -220,7 +246,7 @@
                                         <a href="./blog/work-and-residence-permit-in-switzerland.html" target="_blank" class="swiper__link">Read more</a>
                                     </div>
                                 </div>
-                                <div class="swiper-slide slide-4">
+                                <div class="swiper-slide slide-6">
                                     <div class="swiper__content">
                                         <a href="https://smartcompliance.podia.com/creating-legal-entity-in-switzerland-2023" class="swiper__section-link">WEBINAR</a>
                                         <h3 class="swiper__heading heading__global">
