--- a/index.html
+++ b/index.html
@@ -203,11 +203,10 @@
                                 </div>
                                 <div class="swiper-slide slide-2">
                                     <div class="swiper__content">
-                                        <a href="./events.html" class="swiper__section-link">EVENTS</a>
+                                        <a href="./content-corner.html" class="swiper__section-link">BLOG</a>
                                         <h3 class="swiper__heading heading__global">
-                                            <a class="swiper__heading-link" href="./events/crypto2030-in-davos.html" target="_blank">
-                                                SMART-compliance partners with CRYPTO2030 in Davos
-                                            </a>
+                                            <a class="swiper__heading-link" href="./blog/crypto2030-recap.html" target="_blank">
+                                                CRYPTO2030 in&nbsp;Davos: A&nbsp;Recap of&nbsp;Uniting, Innovating, and Transforming the Web3 Landscape </a>
 
                                         </h3>
                                         <a href="./events/crypto2030-in-davos.html" target="_blank" class="swiper__link">Read more</a>
